[bumpversion]
current_version = 0.1.0
commit = True
tag = True

[isort]
profile = black

[metadata]
description = A Python based DSL for building and managing Elasticsearch queries
long_description = file: README.md
long_description_content_type = text/markdown

[bumpversion:file:setup.py]
search = version='{current_version}'
replace = version='{new_version}'

[bumpversion:file:elasticquery-dsl-py/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[bdist_wheel]
python-tag = py3
